--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^14.14.20",
     "@types/supertest": "^2.0.10",
     "jest": "^26.6.3",
+    "prettier": "2.3.2",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.0",
     "ts-node": "^9.1.1",
